--- a/Labs/Lab0_Python_Basics/Lab0_IntroPython.ipynb
+++ b/Labs/Lab0_Python_Basics/Lab0_IntroPython.ipynb
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1514,7 +1514,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jackie Shea Chea\n"
+      "Jackie Shea Chea\n",
+      "Jackie\n"
      ]
     }
    ],
@@ -1527,7 +1528,8 @@
     "full_name = first + \" \" + middle + \" \" + last\n",
     "print(full_name)\n",
     "\n",
-    "full_name_rev = []"
+    "full_name_rev = full_name[:-10]\n",
+    "print(full_name_rev)"
    ]
   },
   {
