--- a/Labs/Lab1_numstack/Lab1-numstack_solutions.ipynb
+++ b/Labs/Lab1_numstack/Lab1-numstack_solutions.ipynb
@@ -76,7 +76,9 @@
     "pd.set_option('display.max_columns', 100)\n",
     "pd.set_option('display.notebook_repr_html', True)\n",
     "\n",
-    "import seaborn as sns #sets up styles and gives us more plotting options"
+    "import seaborn as sns #sets up styles and gives us more plotting options\n",
+    "\n",
+    "sns.set_context('poster')"
    ]
   },
   {
