--- a/Lectures/Lecture8_Notebook.ipynb
+++ b/Lectures/Lecture8_Notebook.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jackie\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sys\n",
@@ -30,11 +39,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nyc_cab_df = pd.read_csv('nyc_car_hire_data.csv', low_memory=False)"
+    "nyc_cab_df = pd.read_csv('data/nyc_car_hire_data.csv', low_memory=False)"
    ]
   },
   {
@@ -413,13 +422,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How deal with missing values? Can try to impute them. Or can try to make new flag variable that shows whether a value was missing or not. This issue will be dealt w/later on in the course."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Variable Selection: Backwards"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use backwards if not too many predictors, because start w/full set."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_aic(X_train, y_train):\n",
@@ -801,11 +826,10 @@
     "\n",
     "y_non_test = np.hstack((y_train, y_val))\n",
     "\n",
-    "lasso_regression = Lasso(alpha=1.0, fit_intercept=True)\n",
+    "lasso_regression = Lasso(alpha=1.0, fit_intercept=True) # big alpha means big lambda. just arbitrarily chose 1.0 as test case. should really do cross-validation\n",
     "lasso_regression.fit(X_non_test, y_non_test)\n",
     "\n",
-    "print('Lasso regression model:\\n {} + {}^T . x'.format(lasso_regression.intercept_, lasso_regression.coef_))\n",
-    "\n"
+    "print('Lasso regression model:\\n {} + {}^T . x'.format(lasso_regression.intercept_, lasso_regression.coef_))"
    ]
   },
   {
@@ -949,6 +973,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Didn't actually improve test R^2 that much, but only started w/12 predictors. So add dimensionality w/polynomial and interaction terms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Principal Component Regression With Polynomial and Interaction Terms"
    ]
   },
@@ -1058,7 +1089,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1104,7 +1137,7 @@
    ],
    "source": [
     "regression_model = LinearRegression(fit_intercept=True)\n",
-    "kf = KFold(n_splits=5)\n",
+    "kf = KFold(n_splits=5) # 5 splits\n",
     "\n",
     "x_val_scores = []\n",
     "\n",
@@ -1191,13 +1224,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "because we didn't try to standardize Xs, lots of problems?"
+   ]
   }
  ],
  "metadata": {
