--- a/Labs/Lab3_LinearRegression/Lab3_LinearRegression_Final_solns.ipynb
+++ b/Labs/Lab3_LinearRegression/Lab3_LinearRegression_Final_solns.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -242,11 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Jackie\\Anaconda3\\lib\\site-packages\\statsmodels\\compat\\pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
+      "  from pandas.core import datetools\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -266,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -367,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -379,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -500,6 +507,28 @@
     "plt.plot(x_train, y_train, 'ko', xfit, yfit)\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2],\n",
+       "       [2],\n",
+       "       [4]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
    ]
   },
   {
