still not working

--- a/cs109a_midterm_2017-CV.ipynb
+++ b/cs109a_midterm_2017-CV.ipynb
@@ -3263,12 +3263,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORIGIN_AIRPORT_SAT 0.0\n",
+      "ORIGIN_AIRPORT_FLL -0.0\n",
+      "ORIGIN_AIRPORT_EWR 0.0\n",
+      "ORIGIN_AIRPORT_DTW -0.0\n",
+      "ORIGIN_AIRPORT_DFW -0.0\n",
+      "DESTINATION_AIRPORT_DEN -0.0\n",
+      "ORIGIN_AIRPORT_DCA -0.0\n",
+      "ORIGIN_AIRPORT_DAL 0.0\n",
+      "ORIGIN_AIRPORT_CLT -0.0\n",
+      "ORIGIN_AIRPORT_CLE 0.0\n",
+      "ORIGIN_AIRPORT_BWI 0.0\n",
+      "ORIGIN_AIRPORT_HNL -0.0\n",
+      "ORIGIN_AIRPORT_BOS -0.0\n",
+      "ORIGIN_AIRPORT_AUS 0.0\n",
+      "ORIGIN_AIRPORT_ATL -0.0\n",
+      "ORIGIN_AIRPORT_13930 -0.0\n",
+      "DESTINATION_AIRPORT_DTW 0.0\n",
+      "AIRLINE_VX 0.0\n",
+      "DESTINATION_AIRPORT_FLL -0.0\n",
+      "DESTINATION_AIRPORT_HNL -0.0\n",
+      "AIRLINE_OO 0.0\n",
+      "DESTINATION_AIRPORT_HOU -0.0\n",
+      "DESTINATION_AIRPORT_IAD 0.0\n",
+      "ORIGIN_AIRPORT_BNA -0.0\n",
+      "ORIGIN_AIRPORT_HOU -0.0\n",
+      "ORIGIN_AIRPORT_IAD 0.0\n",
+      "DESTINATION_AIRPORT_DCA -0.0\n",
+      "ORIGIN_AIRPORT_SMF -0.0\n",
+      "ORIGIN_AIRPORT_SAN -0.0\n",
+      "ORIGIN_AIRPORT_RSW 0.0\n",
+      "ORIGIN_AIRPORT_RDU 0.0\n",
+      "ORIGIN_AIRPORT_PIT -0.0\n",
+      "ORIGIN_AIRPORT_SNA -0.0\n",
+      "ORIGIN_AIRPORT_PHL 0.0\n",
+      "ORIGIN_AIRPORT_PDX -0.0\n",
+      "ORIGIN_AIRPORT_STL 0.0\n",
+      "ORIGIN_AIRPORT_TPA -0.0\n",
+      "ORIGIN_AIRPORT_OAK -0.0\n",
+      "ORIGIN_AIRPORT_MSY -0.0\n",
+      "DESTINATION_AIRPORT_13930 -0.0\n",
+      "ORIGIN_AIRPORT_MKE 0.0\n",
+      "DESTINATION_AIRPORT_ATL 0.0\n",
+      "ORIGIN_AIRPORT_MDW 0.0\n",
+      "DESTINATION_AIRPORT_AUS 0.0\n",
+      "ORIGIN_AIRPORT_MCI 0.0\n",
+      "DESTINATION_AIRPORT_BNA -0.0\n",
+      "ORIGIN_AIRPORT_LAX -0.0\n",
+      "DESTINATION_AIRPORT_BWI 0.0\n",
+      "DESTINATION_AIRPORT_DAL 0.0\n",
+      "ORIGIN_AIRPORT_IND -0.0\n",
+      "DESTINATION_AIRPORT_IAH 0.0\n",
+      "DESTINATION_AIRPORT_IND 0.0\n",
+      "DESTINATION_AIRPORT_LAS -0.0\n",
+      "DESTINATION_AIRPORT_MCI 0.0\n",
+      "DESTINATION_AIRPORT_TPA 0.0\n",
+      "SCHED_DEP_1 -0.0\n",
+      "DAY_10 -0.0\n",
+      "SCHED_DEP_2 0.0\n",
+      "SCHED_DEP_3 0.0\n",
+      "SCHED_DEP_4 -0.0\n",
+      "DAY_6 -0.0\n",
+      "DAY_5 0.0\n",
+      "DAY_4 0.0\n",
+      "DAY_3 -0.0\n",
+      "SCHED_DEP_5 0.0\n",
+      "SCHED_DEP_10 -0.0\n",
+      "SCHED_DEP_15 0.0\n",
+      "SCHED_DEP_23 0.0\n",
+      "SCHED_ARR_1 0.0\n",
+      "SCHED_ARR_2 0.0\n",
+      "SCHED_ARR_3 -0.0\n",
+      "SCHED_ARR_4 -0.0\n",
+      "SCHED_ARR_6 0.0\n",
+      "SCHED_ARR_7 0.0\n",
+      "SCHED_ARR_16 -0.0\n",
+      "MONTH_2 -0.0\n",
+      "SCHED_ARR_18 -0.0\n",
+      "DESTINATION_AIRPORT_STL -0.0\n",
+      "ORIGIN_AIRPORT_SEA -0.0\n",
+      "DAY_14 -0.0\n",
+      "DESTINATION_AIRPORT_SNA -0.0\n",
+      "DESTINATION_AIRPORT_MCO 0.0\n",
+      "DESTINATION_AIRPORT_MDW -0.0\n",
+      "DESTINATION_AIRPORT_MKE 0.0\n",
+      "DESTINATION_AIRPORT_MSP 0.0\n",
+      "DESTINATION_AIRPORT_MSY 0.0\n",
+      "DESTINATION_AIRPORT_OAK -0.0\n",
+      "DESTINATION_AIRPORT_Other 0.0\n",
+      "DESTINATION_AIRPORT_PDX -0.0\n",
+      "DAY_31 0.0\n",
+      "DESTINATION_AIRPORT_PHL 0.0\n",
+      "DESTINATION_AIRPORT_PIT 0.0\n",
+      "DESTINATION_AIRPORT_RDU -0.0\n",
+      "DAY_27 0.0\n",
+      "DAY_26 0.0\n",
+      "DESTINATION_AIRPORT_RSW -0.0\n",
+      "DESTINATION_AIRPORT_SAN -0.0\n",
+      "DESTINATION_AIRPORT_SAT -0.0\n",
+      "DAY_22 -0.0\n",
+      "DAY_21 -0.0\n",
+      "DESTINATION_AIRPORT_SEA -0.0\n",
+      "DESTINATION_AIRPORT_SJC -0.0\n",
+      "DESTINATION_AIRPORT_SMF -0.0\n",
+      "DAY_17 0.0\n",
+      "DAY_15 0.0\n",
+      "ORIGIN_AIRPORT_SJC -0.0\n",
+      "DISTANCE -0.000327617029505\n",
+      "DAY_2 -0.00210810319217\n",
+      "SCHEDULED_TIME 0.00245038681315\n",
+      "DAY_25 -0.00313400819781\n",
+      "ORIGIN_AIRPORT_MIA -0.00314247791516\n",
+      "SCHED_DEP_22 0.00356936751937\n",
+      "SCHED_ARR_17 0.00396249997249\n",
+      "ORIGIN_AIRPORT_DEN 0.00414253465472\n",
+      "SCHED_ARR_5 0.00480919776941\n",
+      "DESTINATION_AIRPORT_BOS 0.00483206003314\n",
+      "DAY_9 0.00501031201233\n",
+      "DAY_13 -0.00505523152482\n",
+      "DESTINATION_AIRPORT_SLC -0.00506015600288\n",
+      "DAY_28 -0.00588711405995\n",
+      "DAY_7 -0.00686423724875\n",
+      "SCHED_ARR_15 -0.00742166424117\n",
+      "SCHED_DEP_9 -0.00795850669892\n",
+      "AIRLINE_WN -0.0089593147501\n",
+      "DAY_24 0.00983515605513\n",
+      "ORIGIN_AIRPORT_MCO 0.0101467152891\n",
+      "ORIGIN_AIRPORT_LAS 0.0109898562741\n",
+      "DESTINATION_AIRPORT_MIA -0.0120098131039\n",
+      "SCHED_DEP_12 -0.0123940093739\n",
+      "DAY_OF_WEEK_2 -0.0134657142764\n",
+      "DAY_11 -0.0139926441121\n",
+      "MONTH_3 -0.0142155306117\n",
+      "SCHED_ARR_9 -0.0142811114904\n",
+      "DESTINATION_AIRPORT_LAX -0.0160406717441\n",
+      "ORIGIN_AIRPORT_IAH -0.0162389399805\n",
+      "SCHED_DEP_14 -0.0168513324135\n",
+      "SCHED_ARR_14 -0.0171667144366\n",
+      "DAY_16 -0.018603685514\n",
+      "DAY_OF_WEEK_7 -0.0190162239983\n",
+      "ORIGIN_AIRPORT_SFO 0.021981877198\n",
+      "ORIGIN_AIRPORT_Other 0.0226874353713\n",
+      "MONTH_5 0.0227386165136\n",
+      "SCHED_ARR_8 -0.022855412427\n",
+      "AIRLINE_MQ 0.0231860421992\n",
+      "SCHED_ARR_19 0.0241737886729\n",
+      "DAY_19 -0.0250143017171\n",
+      "ORIGIN_AIRPORT_JFK 0.0257247977749\n",
+      "MONTH_12 0.0276566246758\n",
+      "ORIGIN_AIRPORT_SLC -0.0277694164564\n",
+      "ORIGIN_AIRPORT_MSP -0.0298390792127\n",
+      "MONTH_8 0.0304662570809\n",
+      "SCHED_ARR_20 0.0316173612153\n",
+      "SCHED_DEP_16 0.0321093569566\n",
+      "DAY_OF_WEEK_4 -0.0324146903331\n",
+      "SCHED_ARR_11 -0.0394072581973\n",
+      "DAY_30 0.0396081205309\n",
+      "MONTH_4 -0.040068059361\n",
+      "SCHED_DEP_17 0.040131824126\n",
+      "SCHED_ARR_12 -0.0414081886583\n",
+      "SCHED_DEP_8 -0.0414233027205\n",
+      "SCHED_ARR_22 0.0416449272899\n",
+      "ORIGIN_AIRPORT_PHX -0.0417103605702\n",
+      "SCHED_DEP_11 -0.0418559308235\n",
+      "SCHED_ARR_21 0.0419648432162\n",
+      "AIRLINE_DL -0.0419953625963\n",
+      "SCHED_ARR_23 0.0429149752907\n",
+      "SCHED_DEP_19 0.0454444123663\n",
+      "DESTINATION_AIRPORT_ORD 0.0463694746541\n",
+      "DESTINATION_AIRPORT_CLE 0.0468822825802\n",
+      "SCHED_DEP_13 -0.0472670241264\n",
+      "DESTINATION_AIRPORT_SFO 0.0473157761912\n",
+      "SCHED_ARR_13 -0.0473300890463\n",
+      "DAY_20 0.0475832832762\n",
+      "DESTINATION_AIRPORT_PHX -0.0493612029301\n",
+      "DESTINATION_AIRPORT_DFW 0.0495864411631\n",
+      "AIRLINE_US -0.0519337465069\n",
+      "MONTH_7 0.0530620155358\n",
+      "DAY_OF_WEEK_5 -0.0540997596971\n",
+      "DAY_12 -0.0541114663566\n",
+      "ORIGIN_AIRPORT_ORD 0.0583781608041\n",
+      "DAY_OF_WEEK_3 -0.058813792824\n",
+      "DAY_18 0.0589895844862\n",
+      "SCHED_DEP_18 0.0591251952307\n",
+      "SCHED_DEP_21 0.0595362388911\n",
+      "DAY_OF_WEEK_6 -0.0597161918385\n",
+      "DAY_8 0.0599554784698\n",
+      "AIRLINE_EV 0.0605056412946\n",
+      "AIRLINE_B6 0.0610440977866\n",
+      "SCHED_ARR_10 -0.0613129170649\n",
+      "SCHED_DEP_6 -0.0671003646301\n",
+      "DAY_29 -0.0676811543121\n",
+      "AIRLINE_UA 0.0699088940246\n",
+      "DAY_23 0.0778871547932\n",
+      "DESTINATION_AIRPORT_EWR 0.0787813687547\n",
+      "DESTINATION_AIRPORT_JFK 0.0800035161064\n",
+      "SCHED_DEP_20 0.0802750108232\n",
+      "DESTINATION_AIRPORT_CLT -0.0821561633401\n",
+      "SCHED_DEP_7 -0.0823127020851\n",
+      "ORIGIN_AIRPORT_LGA 0.0917489552084\n",
+      "AIRLINE_AS -0.0919023013693\n",
+      "MONTH_11 -0.0960799396419\n",
+      "MONTH_6 0.103680294518\n",
+      "AIRLINE_F9 0.108023010617\n",
+      "MONTH_10 -0.113293667527\n",
+      "MONTH_9 -0.115988166876\n",
+      "DESTINATION_AIRPORT_LGA 0.137110436139\n",
+      "AIRLINE_HA -0.150643019017\n",
+      "AIRLINE_NK 0.163228138385\n"
+     ]
+    }
+   ],
+   "source": [
+    "si= np.argsort(np.abs(lassocv.coef_))\n",
+    "for i,x in enumerate(lassocv.coef_[si]):\n",
+    "    print(dfdtrain_X.columns[si][i], x)"
+   ]
   },
   {
    "cell_type": "code",
